fix overflowing card info out of the whiteboard

--- a/css/projects.css
+++ b/css/projects.css
@@ -13,7 +13,7 @@
   grid-auto-rows: minmax(auto, 1fr);
   align-content: start;
   gap: 1rem;
-  padding: 1rem;
+  padding: 2.2rem;
   background-color: #f9f9f9;
   border-radius: 10px;
   border: 2px solid var(--text-color);
@@ -24,6 +24,9 @@
 
 /* Project card container */
 .project-card {
+  position: relative; 
+  isolation: isolate; 
+  z-index: 1;
   perspective: 2000px;
   transform-style: preserve-3d;
   cursor: pointer;
@@ -38,15 +41,13 @@
 
 /* Card face styles */
 .card-face {
-  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 1rem;
   width: 100%;
-  margin: 0 auto;
   padding-block: 1.5rem;
-  padding-inline: 2rem;
+  padding-inline: 7rem;
   border-radius: 12px;
   transition: transform var(--face-transition);
   background: linear-gradient(
@@ -69,16 +70,16 @@
 
 /* Transform the card face on hover or focus */
 .project-card:hover .card-face,
-.project-card:focus-visible .card-face {
-  transform: translateZ(150px) rotateX(5deg) rotateY(150deg);
+.project-card:focus-visible .card-face { 
+  transform: translateZ(150px) rotateX(5deg) rotateY(0deg);
   box-shadow: var(--card-shadow);
-  z-index: 6;
+  z-index: 2;
 }
 
 /* Pinned paper effect (matches skills section) */
 .project-card .pin {
   position: absolute;
-  top: -8px;
+  top: 1rem;
   right: 8px;
   width: 24px;
   height: 24px;
@@ -108,14 +109,12 @@
 
 /* Card info (project details) */
 .card-info {
-  height: fit-content;
   width: 100%;
   padding: 2rem 0.5rem;
   visibility: hidden;
   position: absolute;
-  top: 0; /* Position below card-face */
+  top: -1.5rem; 
   left: 0;
-  transform: translateY(-100px);
   z-index: 10;
   opacity: 0;
   transition: opacity 0.3s ease, transform 0.3s ease, visibility 0.3s ease;
@@ -155,9 +154,6 @@
   top: -0.5rem;
   margin-bottom: 1rem;
   margin: auto;
-  /* width: 100%;
-  height: 6px;
-  border-radius: 10px; */
   background: #fffef9;
   box-shadow: 0 0px 1px 1px #ffc78e, 0 1px 2px 1px #ff942977,
     0 2px 6px 1px #e98b2d77, 0 4px 12px 0px #ff9e3d99,
@@ -247,9 +243,3 @@
   overflow: hidden;
 }
 
-@media (max-width: 768px) {
-  .card-info {
-    top: -1.5rem;
-    bottom: 100%;
-  }
-}
